# hl_social_network

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  postman_collection.json  pyproject.toml  ruff.toml
src/: app.py  settings.py
src/db/: connector.py
src/db/alembic/: env.py
src/db/alembic/versions/: 20250426_c26b151cd254_user_table.py
src/user/: auth.py  router.py  schemas.py
tests/: conftest.py
tests/fixtures/: api.py  database.py
tests/fixtures/db_data/: __init__.py  prepare_user.py
tests/high_load/: report.md  test_high_load.py
tests/user/: test_get_user_by_id.py  test_search.py  test_user_login.py  test_user_register.py
